# udomi.me

back.udomi.me/: .env  .gitignore  Cargo.toml
back.udomi.me/src/: main.rs
back.udomi.me/src/api/: mod.rs  s3.rs  tags.rs
back.udomi.me/src/api/adoption/: adoption_api.rs
back.udomi.me/src/api/breed/: breed_api.rs
back.udomi.me/src/api/pet/: pet_api.rs
back.udomi.me/src/api/user/: user_api.rs
back.udomi.me/src/models/: error.rs  mod.rs  pet.rs
back.udomi.me/src/models/adoption/: adoption.rs
back.udomi.me/src/models/breed/: breed.rs
back.udomi.me/src/models/pet/: pet.rs
back.udomi.me/src/models/species/: species.rs
back.udomi.me/src/models/user/: user.rs
front.udomi.me/: index.html  package-lock.json  package.json
front.udomi.me/src/: App.tsx  main.tsx  theme.ts
front.udomi.me/src/api/: axios.ts
front.udomi.me/src/api/adoption/: adoption.ts
front.udomi.me/src/api/breed/: breed.ts
front.udomi.me/src/api/pet/: pet.ts
front.udomi.me/src/api/user/: user.ts
front.udomi.me/src/components/AddPet/: AddPetForm.tsx
front.udomi.me/src/components/Home/: Home.tsx
front.udomi.me/src/components/Login/: Login.tsx
front.udomi.me/src/components/Navigation/: Navigation.tsx
front.udomi.me/src/components/PetDetail/: PetDetail.tsx
front.udomi.me/src/components/PetList/: PetList.tsx
front.udomi.me/src/components/Profile/: Profile.tsx
front.udomi.me/src/components/Register/: Register.tsx
front.udomi.me/src/context/userContext/: userContext.tsx
front.udomi.me/src/models/: adoption.ts  breed.ts  pet.ts  user.ts
