[package]
name = "udomi-me"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
poem-openapi = { version = "2", features = ["swagger-ui", "openapi-explorer", "chrono"] }
poem = "1"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
